part 6 - add dashboard and route to details

--- a/src/app/heroes/heroes.component.less
+++ b/src/app/heroes/heroes.component.less
@@ -1,35 +1,32 @@
 /* HeroesComponent's private CSS styles */
-.selected {
-    background-color: #CFD8DC !important;
-    color: white;
-}
 .heroes {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
     width: 15em;
     li {
-        cursor: pointer;
         position: relative;
-        left: 0;
+        cursor: pointer;
         background-color: #EEE;
         margin: .5em;
         padding: .3em 0;
         height: 1.6em;
         border-radius: 4px;
     }
-    li.selected:hover {
-        background-color: #BBD8DC !important;
-        color: white;
-    }
     li:hover {
         color: #607D8B;
         background-color: #DDD;
         left: .1em;
     }
-    .text {
+    a {
+        color: #888;
+        text-decoration: none;
         position: relative;
-        top: -3px;
+        display: block;
+        width: 250px;
+    }
+    a:hover {
+        color:#607D8B;
     }
     .badge {
         display: inline-block;
@@ -42,6 +39,8 @@
         left: -1px;
         top: -4px;
         height: 1.8em;
+        min-width: 16px;
+        text-align: right;
         margin-right: .8em;
         border-radius: 4px 0 0 4px;
     }
