--- a/src/app/heroes/heroes.component.less
+++ b/src/app/heroes/heroes.component.less
@@ -1,4 +1,3 @@
-/* HeroesComponent's private CSS styles */
 .heroes {
     margin: 0 0 2em 0;
     list-style-type: none;
@@ -44,4 +43,25 @@
         margin-right: .8em;
         border-radius: 4px 0 0 4px;
     }
+}
+button {
+    background-color: #eee;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    cursor: hand;
+    font-family: Arial;
+}
+
+button:hover {
+    background-color: #cfd8dc;
+}
+
+button.delete {
+    position: relative;
+    left: 194px;
+    top: -32px;
+    background-color: gray !important;
+    color: white;
 }
