Add time-ago pipe

--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let tweet of tweets" class="tweet-container">
   <div class="tweet-header">
     <strong>{{ tweet.user }}</strong>
-    <small class="time">{{ tweet.created_at | date:'short' }}</small>
+    <small class="time">{{ tweet.created_at | timeAgo }}</small>
   </div>
   <div class="tweet-content">
     {{ tweet.text }}
