--- a/src/app/timeline/timeline.component.less
+++ b/src/app/timeline/timeline.component.less
@@ -27,3 +27,26 @@
   }
 }
 
+.create-tweet-container {
+  margin-top: 20px;
+  margin-left: 10px;
+
+  textarea {
+    background: #fff;
+    border: 1px solid #e6ecf0;
+    border-radius: 8px;
+    line-height: 20px;
+  }
+    
+  .send-tweet-button {
+    background-color: #32ADAD;
+    border-color: transparent;
+    border-radius: 100px;
+    color: white;
+    font-size: 10px;
+    line-height: 8px;
+    padding: 6px 16px;
+    margin-left: 310px;
+    cursor: pointer;
+  }
+}
