--- a/src/app/timeline/timeline.component.less
+++ b/src/app/timeline/timeline.component.less
@@ -27,6 +27,17 @@
   }
 }
 
+.favorite {
+  margin-top: 5px;
+  color: #e0245e;
+  .button {
+    cursor: pointer;
+  }
+  span {
+    margin-left: 4px;
+  }
+}
+
 .create-tweet-container {
   margin-top: 20px;
   margin-left: 10px;
