--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,1 +1,10 @@
-<li *ngFor="let tweet of tweets"><strong>{{tweet.created_at | date:'short' }}</strong> - {{tweet.user}} : {{tweet.text}}</li>
+<ul>
+	<li *ngFor="let tweet of tweets">
+		<i (click)="likeTweet(tweet)" class="far fa-heart"></i><label *ngIf="tweet.like > 0">{{tweet.like}}</label><br>
+		<strong>{{tweet.created_at | date:'short' }}</strong> - {{tweet.user}} : {{tweet.text}}
+	</li>
+</ul>
+<br>
+<label>Formulaire textarea</label>
+<textarea #newTweet cols="30" rows="10">{{newTweet.value}}</textarea>
+<button (click)="onSave(newTweet.value)">Save</button>
