Utilisateur et Gestion d'erreurs

--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,8 +1,14 @@
 
 
 <div class="container mt-3 rounded" style="border: 1px solid #1b95e0">
-    
     <h3 class="text-center mb-4 mt-2 rounded" style="background-color: #1b95e0; color:#fff ;padding:10px;"> Mon fil d'actualité  <span ><i class="fab fa-twitter"></i></span>  </h3>
+        <div class="form-group text-center mb-3">
+            <form #form1="ngForm" (ngSubmit)="UpdateUsername(form1)" novalidate>
+                <input type="text" class="form-control" placeholder="Votre username" name="username" ngModel required value="{{ username }}">
+                <button class="btn btn-sm btn-primary mt-1" >Valider</button>
+            </form>
+        </div>
+        
     <div class="card m-2" *ngFor="let tweet of tweets">
         <h5 class="card-header"><img src="https://placehold.it/50x50" class="mr-2 rounded-circle"><b>{{tweet.user}}</b>-<a href="#">@{{tweet.user}} </a> <small class="text-muted" style="float: right;">{{ tweet.created_at | timeAgo }}</small></h5>
         <div class="card-body">
@@ -15,11 +21,11 @@
                                     <a href="#" class="btn btn-outline-success btn-sm btn-block "><i class="fas fa-retweet"></i></a>
                             </div>
                             <div class="col-md-2">  
-                                    <a href="#" *ngIf="tweet.liked === true  " class="btn btn-danger btn-sm btn-block " (click)="UpdateLike(tweet.id)" ><i class="fas fa-heart"> {{ tweet.like }}</i></a>
+                                    <a href="#" *ngIf="tweet.liked === true " class="btn btn-danger btn-sm btn-block " (click)="UpdateLike(tweet.id)" ><i class="fas fa-heart"> {{ tweet.like }}</i></a>
                                     <a href="#" *ngIf="tweet.liked === false " class="btn btn-outline-danger btn-sm btn-block " (click)="UpdateLike(tweet.id)" ><i class="far fa-heart"> {{ tweet.like }}</i></a>
                             </div>
                             <div class="col-md-2">  
-                                    <a href="#" class="btn btn-outline-primary btn-sm btn-block "><i class="fas fa-share-alt"></i></a>
+                                <a href="#" class="btn btn-outline-primary btn-sm btn-block "><i class="fas fa-share-alt"></i></a>
                             </div>
                         </div>
                 </div>
@@ -29,7 +35,9 @@
     <div class="form-group mt-5 mb-5">
         <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
             <textarea class="form-control" rows="3" name="tweetValue" ngModel required></textarea>
-            <button class="btn btn-info rounded-pill mt-1"  type="submit" style="float: right;" >Tweeter</button>
+            
+            <button *ngIf="disabled === true " class="btn btn-info rounded-pill mt-1" disabled="disabled" type="submit" style="float: right;" >Tweeter</button>
+            <button *ngIf="disabled === false " class="btn btn-info rounded-pill mt-1"  type="submit" style="float: right;" >Tweeter</button>
         </form>
     </div>
 </div>
