Add new route to new component, tweet detail

--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -2,6 +2,7 @@
 
 <div *ngFor="let tweet of tweets" class="tweet-container">
   <app-tweet [tweet]="tweet"></app-tweet>
+  <a routerLink="/detail/{{tweet.id}}">détail</a>
 </div>
 
 <div class="create-tweet-container">
