--- a/src/app/timeline/timeline.component.less
+++ b/src/app/timeline/timeline.component.less
@@ -1,79 +1,10 @@
-@grey: #657786;
-
 .tweet-container {
   margin-top: 10px;
   margin-left: 10px;
 }
 
-.tweet-header {
-  color: #14171a;
-
-  .time {
-    white-space: nowrap;
+.add-tweet {
+  a, i {
+      color: cornflowerblue ;
   }
-}
-
-.time {
-  color: @grey;
-}
-
-.time:before {
-  content: "\00b7";
-  margin: 5px;
-}
-
-.tweet-content {
-  margin: 0;
-  p {
-    white-space: pre-wrap;
-  }
-}
-
-.favorite {
-  margin-top: 5px;
-  color: #e0245e;
-  .button {
-    cursor: pointer;
-  }
-  span {
-    margin-left: 4px;
-  }
-}
-
-.create-tweet-container {
-  margin-top: 20px;
-  margin-left: 10px;
-
-  textarea {
-    background: #fff;
-    border: 1px solid #e6ecf0;
-    border-radius: 8px;
-    line-height: 20px;
-  }
-    
-  .send-tweet-button {
-    background-color: #32ADAD;
-    border-color: transparent;
-    border-radius: 100px;
-    color: white;
-    font-size: 10px;
-    line-height: 8px;
-    padding: 6px 16px;
-    margin-left: 310px;
-    cursor: pointer;
-  }
-}
-
-.favorite-count {
-  margin-left: 4px;
-}
-
-.user-box {
-  margin-bottom: 10px;
-  padding: 5px;
-  color: #14171a;
-}
-
-.disabled {
-  background-color: @grey !important;
 }
