stop event propagation when ckiling to like to prevent redirection

--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -10,6 +10,6 @@
     'fas': tweet.isLiked,
     'far': !tweet.isLiked
   }"
-  (click)="likeTweet(tweet.id)"></i>
+  (click)="likeTweet(tweet.id, $event)"></i>
   <span *ngIf="tweet.favoriteCount != null">{{ tweet.favoriteCount }}</span>
 </div>
